// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: inherit and theme: dark 1`] = `
":host {
  position: relative;
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  max-width: 100% !important;
  max-height: 100% !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
a, svg {
  display: block;
  max-width: 100%;
  max-height: 100%;
  height: inherit;
}
a {
  text-decoration: none;
  outline: 0;
}
a:focus::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 1px;
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
a:focus:not(:focus-visible)::before {
  outline: 0;
}
svg {
  fill: #FBFCFF;
}"
`;

exports[`getComponentCss() should return correct css for size: inherit and theme: light 1`] = `
":host {
  position: relative;
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  max-width: 100% !important;
  max-height: 100% !important;
  box-sizing: content-box !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
a, svg {
  display: block;
  max-width: 100%;
  max-height: 100%;
  height: inherit;
}
a {
  text-decoration: none;
  outline: 0;
}
a:focus::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 1px;
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
a:focus:not(:focus-visible)::before {
  outline: 0;
}
svg {
  fill: #010205;
}"
`;

exports[`getComponentCss() should return correct css for size: small and theme: dark 1`] = `
":host {
  position: relative;
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  max-width: 100% !important;
  max-height: 100% !important;
  box-sizing: content-box !important;
  height: clamp(0.63rem, 0.42vw + 0.5rem, 1rem) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
a, svg {
  display: block;
  max-width: 100%;
  max-height: 100%;
  height: inherit;
}
a {
  text-decoration: none;
  outline: 0;
}
a:focus::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 1px;
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
a:focus:not(:focus-visible)::before {
  outline: 0;
}
svg {
  fill: #FBFCFF;
}
@supports (height: round(down, 1px, 1px)) {
  :host {
    height: round(down, clamp(0.63rem, 0.42vw + 0.5rem, 1rem), 1px) !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for size: small and theme: light 1`] = `
":host {
  position: relative;
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  max-width: 100% !important;
  max-height: 100% !important;
  box-sizing: content-box !important;
  height: clamp(0.63rem, 0.42vw + 0.5rem, 1rem) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
a, svg {
  display: block;
  max-width: 100%;
  max-height: 100%;
  height: inherit;
}
a {
  text-decoration: none;
  outline: 0;
}
a:focus::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 1px;
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
a:focus:not(:focus-visible)::before {
  outline: 0;
}
svg {
  fill: #010205;
}
@supports (height: round(down, 1px, 1px)) {
  :host {
    height: round(down, clamp(0.63rem, 0.42vw + 0.5rem, 1rem), 1px) !important;
  }
}
"
`;
